--- a/Software/.classpath
+++ b/Software/.classpath
@@ -24,5 +24,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="batik-all-1.7.jar"/>
+	<classpathentry kind="lib" path="junit-4.12.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
