--- a/Software/.classpath
+++ b/Software/.classpath
@@ -25,5 +25,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="batik-all-1.7.jar"/>
 	<classpathentry kind="lib" path="junit-4.12.jar"/>
+	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
